--- a/index.html
+++ b/index.html
@@ -3,109 +3,88 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🍊 پیام‌رسان نارنجی</title>
+  <title>🍊 نارنجی چت</title>
   <style>
     body {
       font-family: 'Vazirmatn', sans-serif;
       background: linear-gradient(135deg, #ffa931, #ffcc33);
-      height: 100vh;
       margin: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      min-height: 100vh;
     }
-    h1 {
-      margin-top: 30px;
-      color: #fff;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.3);
-    }
-    #chat-box {
+    h1 { color: white; margin-top: 30px; }
+    #login-section, #chat-section {
+      background: white;
+      padding: 20px;
+      border-radius: 15px;
+      margin-top: 20px;
       width: 90%;
-      max-width: 500px;
-      height: 65vh;
-      background: #fff;
+      max-width: 400px;
+      text-align: center;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    }
+    input {
+      width: 90%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      text-align: center;
+      font-size: 16px;
+    }
+    button {
+      background: #ff7b00;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 16px;
+      margin-top: 10px;
+    }
+    button:hover { background: #ff9100; }
+    #chat-box {
+      width: 100%;
+      height: 300px;
+      background: #fff3cd;
       border-radius: 15px;
       overflow-y: auto;
       padding: 10px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-      margin-top: 20px;
+      margin-bottom: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
     }
-    #message-input {
-      width: 70%;
-      padding: 10px;
-      border: none;
-      border-radius: 10px;
-      outline: none;
-      font-size: 16px;
-      background: #fff8e1;
-    }
-    #send-btn {
-      padding: 10px 15px;
-      background: #ff7b00;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    #send-btn:hover {
-      background: #ff9100;
-    }
-    #login-btn {
-      background: #ff7b00;
-      color: white;
-      border: none;
-      padding: 10px 25px;
-      border-radius: 15px;
-      cursor: pointer;
-      margin-top: 20px;
-      font-size: 16px;
-      transition: 0.3s;
-    }
-    #login-btn:hover {
-      background: #ff9100;
-    }
-    .message {
-      background: #fff3cd;
-      padding: 8px 12px;
-      border-radius: 10px;
-      margin: 5px 0;
-      word-wrap: break-word;
-    }
-    .sender {
-      font-weight: bold;
-      color: #ff7b00;
-    }
-    #error-box {
-      color: red;
-      font-size: 14px;
-      margin-top: 10px;
-      display: none;
-    }
+    .message { padding: 6px 10px; border-radius: 10px; background: #fff; }
+    .sender { font-weight: bold; color: #ff7b00; }
   </style>
 </head>
 <body>
 
   <h1>🍊 پیام‌رسان نارنجی</h1>
-  <button id="login-btn">ورود با گوگل</button>
-  <p id="error-box"></p>
 
-  <div id="chat-box"></div>
+  <div id="login-section">
+    <h3>نام و یوزرنیم خود را وارد کنید</h3>
+    <input type="text" id="name-input" placeholder="نام شما">
+    <input type="text" id="username-input" placeholder="یوزرنیم (بدون فاصله)">
+    <button id="enter-btn">ورود به چت</button>
+    <p id="login-status" style="color:red;"></p>
+  </div>
 
-  <div id="chat-controls" style="display:none; margin-top:10px;">
+  <div id="chat-section" style="display:none;">
+    <div id="chat-box"></div>
     <input type="text" id="message-input" placeholder="پیامتو بنویس...">
-    <button id="send-btn">📤 ارسال</button>
+    <button id="send-btn">ارسال</button>
   </div>
 
   <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getDatabase, ref, push, onChildAdded } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
-    import { getAuth, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-    // 🍊 تنظیمات مخصوص پروژه‌ات در Firebase
+    // 🔥 تنظیمات پروژه Firebase خودت
     const firebaseConfig = {
       apiKey: "YOUR_API_KEY",
       authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
@@ -118,39 +97,39 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
-    const auth = getAuth(app);
-    const provider = new GoogleAuthProvider();
 
+    const nameInput = document.getElementById("name-input");
+    const usernameInput = document.getElementById("username-input");
+    const enterBtn = document.getElementById("enter-btn");
+    const loginStatus = document.getElementById("login-status");
+
+    const chatSection = document.getElementById("chat-section");
     const chatBox = document.getElementById("chat-box");
-    const loginBtn = document.getElementById("login-btn");
     const messageInput = document.getElementById("message-input");
     const sendBtn = document.getElementById("send-btn");
-    const chatControls = document.getElementById("chat-controls");
-    const errorBox = document.getElementById("error-box");
 
-    let user = null;
+    let currentUser = null;
 
-    // ورود با گوگل
-    loginBtn.addEventListener("click", async () => {
-      try {
-        const result = await signInWithPopup(auth, provider);
-        user = result.user;
-        loginBtn.style.display = "none";
-        chatControls.style.display = "block";
-        errorBox.style.display = "none";
-      } catch (error) {
-        console.error(error);
-        errorBox.textContent = "⚠️ خطا در ورود! لطفاً دامنه را در Firebase Authorized Domains اضافه کن.";
-        errorBox.style.display = "block";
+    // ورود به چت با اسم و یوزرنیم
+    enterBtn.addEventListener("click", () => {
+      const name = nameInput.value.trim();
+      const username = usernameInput.value.trim();
+      if (!name || !username) {
+        loginStatus.textContent = "لطفاً نام و یوزرنیم خود را وارد کنید!";
+        return;
       }
+      currentUser = { name, username };
+      document.getElementById("login-section").style.display = "none";
+      chatSection.style.display = "block";
     });
 
     // ارسال پیام
     sendBtn.addEventListener("click", () => {
       const text = messageInput.value.trim();
-      if (text && user) {
+      if (text && currentUser) {
         push(ref(db, "messages"), {
-          name: user.displayName || "ناشناس",
+          name: currentUser.name,
+          username: currentUser.username,
           text: text,
           time: Date.now()
         });
@@ -158,12 +137,12 @@
       }
     });
 
-    // نمایش پیام‌ها به‌صورت زنده
+    // نمایش پیام‌ها زنده
     onChildAdded(ref(db, "messages"), snapshot => {
       const msg = snapshot.val();
       const div = document.createElement("div");
       div.className = "message";
-      div.innerHTML = `<span class="sender">${msg.name}:</span> ${msg.text}`;
+      div.innerHTML = `<span class="sender">${msg.name} (@${msg.username}):</span> ${msg.text}`;
       chatBox.appendChild(div);
       chatBox.scrollTop = chatBox.scrollHeight;
     });
